added nav bar for movie links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
 </head>
 <body>
     <h1>Hello World!!</h1>
+    <nav class="navbar" role="navigation" aria-label="dropdown navigation">
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Links
+          </a>
+          <div class="navbar-dropdown">
+            <a class="navbar-item">
+              Overview
+            </a>
+            <a class="navbar-item">
+              Elements
+            </a>
+            <a class="navbar-item">
+              Components
+            </a>
+          </div>
+        </div>
+      </nav>
     
     
 
