added live links to the link dropdown

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
           </a>
           <div class="navbar-dropdown">
             <a class="navbar-item">
-              Overview
+              <a href="https://www.amctheatres.com/">AMC Theater</a>
             </a>
             <a class="navbar-item">
-              Elements
+              <a href="https://www.rottentomatoes.com/">Rotten Tomatoes</a>
             </a>
             <a class="navbar-item">
-              Components
+              <a href="https://www.fandango.com/">Fandango</a>
             </a>
           </div>
         </div>
