Added functions, fixed issue

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         </div>
       </div>
 
-      <!-- <div class="tile-is-parent hide">
-        <article class="tile is-child notification is-info">
+      <div class="tile-is-parent hide">
+        <article id="movie-info" class="tile is-child notification is-info">
           <p class="title"><span id="movie-title"></span></p>
           <p class="subtitle"><span id="release-date"></span></p>
           <figure class="image is-4by3">
             <img id="poster" src="">
           </figure>
         </article>
-      </div> -->
+      </div>
     <div>
         <h3>Movies I've Seen:</h3>
         <div>
-            <ul>
+            <ul class="list">
                 <li></li>
             </ul>
         </div>
