added links to readme, added image and styling to html and css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
     <h1 id="title">Movie Tracker</h1>
     <nav class="navbar" role="navigation" aria-label="dropdown navigation">
-        <div id="nav" class="navbar-item has-dropdown is-hoverable has-background-grey-light	 " >
+        <div id="nav" class="navbar-item has-dropdown is-hoverable has-background-grey-light" >
           <a class="navbar-link has-text-black-bis	has-background-grey-light">
             Links
           </a>
@@ -45,24 +45,25 @@
           </button>
         </div>
       </div>
-
+      
+      <div>
+          <h3 id="seen">Movies I've Seen:</h3>
+          <div class="">
+              <ul class="list type="1"">
+                  <li></li>
+              </ul>
+          </div>
+      </div>  
       <div id="movieInfo" class="tile-is-parent hide">
         <article id="movie-info" class="tile is-child notification is-info">
           <p class="title"><span id="movie-title"></span></p>
           <p class="subtitle"><span id="release-date"></span></p>
-          <figure class="image is-4by3">
-            <img id="poster" src="">
+          <figure class="image is-2by1">
+            <img id="poster" src="https://camblycontent.files.wordpress.com/2016/07/favorite-movies-of-all-time.png">
           </figure>
         </article>
       </div>
-    <div>
-        <h3 id="seen">Movies I've Seen:</h3>
-        <div>
-            <ul class="list">
-                <li></li>
-            </ul>
-        </div>
-    </div>  
+      
    
 
 
