--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Movie Tracker</title>
@@ -21,13 +21,13 @@
         </a>
         <div id="drop" class="navbar-dropdown has-background-grey-light">
           <a class="navbar-item">
-            <a href="https://www.amctheatres.com/">AMC Theater</a>
+            <a href="https://www.amctheatres.com/" target="_blank">AMC Theater</a>
           </a>
           <a class="navbar-item">
-            <a href="https://www.rottentomatoes.com/">Rotten Tomatoes</a>
+            <a href="https://www.rottentomatoes.com/" target="_blank">Rotten Tomatoes</a>
           </a>
           <a class="navbar-item">
-            <a href="https://www.fandango.com/">Fandango</a>
+            <a href="https://www.fandango.com/" target="_blank">Fandango</a>
           </a>
         </div>
       </div>
