added image to html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
   </div>
   </div>
 
+  <div class="image">
+    <figure class="image is-2by1">
+      <img id="poster" src="https://camblycontent.files.wordpress.com/2016/07/favorite-movies-of-all-time.png">
+    </figure>
+  </div>
+
   <!-- Container for movies -->
   <div class="container flex-column">
     <div class="flex-column">
