added basic styling to css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header id="header">
-    <h1 id="title">Movie Tracker</h1>
+    <h1 id="title">Movie Tracker🍿</h1>
     <nav class="navbar" role="navigation" aria-label="dropdown navigation">
       <div id="nav" class="navbar-item has-dropdown is-hoverable has-background-grey-light">
         <a class="navbar-link has-text-black-bis	has-background-grey-light">
@@ -48,9 +48,9 @@
   <!-- Container for movies -->
   <div class="container flex-column">
     <div class="flex-column">
-      <h2 id="seen">Movies I've Seen:</h2>
+      <h2 id="seen">🍿Movies I've Seen🍿:</h2>
       <div>
-        <ul class="list type=" 1"">
+        <ul class="list type= 1">
           <li class="list-buttons"></li>
         </ul>
       </div>
