added chuck button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <header id="header">
     <h1 id="title">Movie Tracker</h1>
+    <!-- <button class="button is-danger is-medium is-rounded ">CHUCK</button> -->
     <nav class="navbar" role="navigation" aria-label="dropdown navigation">
       <div id="nav" class="navbar-item has-dropdown is-hoverable has-background-grey-light">
         <a class="navbar-link has-text-black-bis	has-background-grey-light">
@@ -21,13 +22,13 @@
         </a>
         <div id="drop" class="navbar-dropdown has-background-grey-light">
           <a class="navbar-item">
-            <a href="https://www.amctheatres.com/" target="_blank">AMC Theater</a>
+            <a href="https://www.amctheatres.com/" target="_blank" rel="nonopener noreferrer">AMC Theater</a>
           </a>
           <a class="navbar-item">
-            <a href="https://www.rottentomatoes.com/" target="_blank">Rotten Tomatoes</a>
+            <a href="https://www.rottentomatoes.com/" target="_blank" rel="nonopener noreferrer">Rotten Tomatoes</a>
           </a>
           <a class="navbar-item">
-            <a href="https://www.fandango.com/" target="_blank">Fandango</a>
+            <a href="https://www.fandango.com/" target="_blank" rel="nonopener noreferrer">Fandango</a>
           </a>
         </div>
       </div>
@@ -56,7 +57,7 @@
     <div class="flex-column">
       <h2 id="seen">Movies I've Seen:</h2>
       <div>
-        <ul class="list type=" 1"">
+        <ul class="list type=1">
           <li class="list-buttons"></li>
         </ul>
       </div>
