--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Movie Tracker</title>
@@ -13,7 +13,7 @@
 
 <body>
   <header id="header">
-    <h1 id="title">Movie Tracker</h1>
+    <h1 id="title">Movie Tracker🍿</h1>
     <nav class="navbar" role="navigation" aria-label="dropdown navigation">
       <div id="nav" class="navbar-item has-dropdown is-hoverable has-background-grey-light">
         <a class="navbar-link has-text-black-bis	has-background-grey-light">
@@ -21,13 +21,13 @@
         </a>
         <div id="drop" class="navbar-dropdown has-background-grey-light">
           <a class="navbar-item">
-            <a href="https://www.amctheatres.com/">AMC Theater</a>
+            <a href="https://www.amctheatres.com/" target="_blank">AMC Theater</a>
           </a>
           <a class="navbar-item">
-            <a href="https://www.rottentomatoes.com/">Rotten Tomatoes</a>
+            <a href="https://www.rottentomatoes.com/" target="_blank">Rotten Tomatoes</a>
           </a>
           <a class="navbar-item">
-            <a href="https://www.fandango.com/">Fandango</a>
+            <a href="https://www.fandango.com/" target="_blank">Fandango</a>
           </a>
         </div>
       </div>
@@ -38,19 +38,25 @@
       <input class="input" type="text" placeholder="Search For a Movie!">
     </div>
     <div class="control">
-      <button class="button is-info">
+      <button class="btn-search button is-info">
         Search
       </button>
     </div>
   </div>
   </div>
 
+  <div class="image">
+    <figure class="image is-2by1">
+      <img id="poster" src="https://camblycontent.files.wordpress.com/2016/07/favorite-movies-of-all-time.png">
+    </figure>
+  </div>
+
   <!-- Container for movies -->
   <div class="container flex-column">
     <div class="flex-column">
-      <h2 id="seen">Movies I've Seen:</h2>
+      <h2 id="seen">🍿Movies I've Seen🍿:</h2>
       <div>
-        <ul class="list type=" 1"">
+        <ul class="list type= 1">
           <li class="list-buttons"></li>
         </ul>
       </div>
@@ -66,6 +72,18 @@
         <button class="button btn-submit is-fullwidth mt-2 is-primary">Submit</button>
       </div>
       <button class="modal-close is-large" aria-label="close"></button>
+    </div>
+     <!-- Show error message -->
+     <div class="modal modal-err is-primary">
+      <div class="modal-background"></div>
+      <div class="modal-card">
+        <header class="modal-card-head">
+          <button class="delete" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+          Movies not found
+        </section>
+      </div>
     </div>
      <!-- jQuery UI <script> tag -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
