--- a/index.html
+++ b/index.html
@@ -41,14 +41,12 @@
       <input class="input" type="text" placeholder="Search For a Movie!">
     </div>
     <div class="control">
-      <button class="button is-info" id="searchBtn">
+      <button class="button btn-search is-info" id="searchBtn">
         Search
       </button>
     </div>
   </div>
   </div>
-
-  
   <!-- Container for movies -->
   <div class="container flex-column">
     <div class="flex-column">
