fixed white spaces in dropdown and fixed some positioning

--- a/index.html
+++ b/index.html
@@ -14,28 +14,29 @@
 <body>
   <header id="header">
     <h1 id="title">Movie Tracker🍿</h1>
-    <nav class="navbar" role="navigation" aria-label="dropdown navigation">
-      <div id="nav" class="navbar-item has-dropdown is-hoverable has-background-info is-responsive">
-        <a class="navbar-link has-text-link-light	has-background-info">
+    <nav class="navbar is-shadowless" role="navigation" aria-label="dropdown navigation">
+      <div id="nav" class="navbar-item has-dropdown is-shadowless is-hoverable has-background-info">
+        <a class="navbar-link has-text-link-light	has-background-info ">
           Links
         </a>
         <div id="drop" class="navbar-dropdown has-background-info">
-          <a class="navbar-item ">
+          <a class="navbar-item has-background-info">
             <a href="https://www.amctheatres.com/" target="_blank" rel="nonopener noreferrer">AMC Theater</a>
           </a>
-          <a class="navbar-item">
+          <a class="navbar-item has-background-info">
             <a href="https://www.rottentomatoes.com/" target="_blank" rel="nonopener noreferrer">Rotten Tomatoes</a>
           </a>
-          <a class="navbar-item">
+          <a class="navbar-item has-background-info">
             <a href="https://www.fandango.com/" target="_blank" rel="nonopener noreferrer">Fandango</a>
           </a>
         </div>
       </div>
     </nav>
-    <div class="chuck-joke">
-       <button id="chuckBtn">CHUCK!</button>
-    </div>
+
   </header>
+  <div class="chuck-joke">
+    <button id="chuckBtn">CHUCK!</button>
+ </div>
   <div class="field has-addons" id="user">
     <div class="control">
       <input class="input" type="text" placeholder="Search For a Movie!">
