--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <div class="container flex-column mt-5">
         <div class="flex-column">
             <p class="is-size-1">Movies</p>
+            <p>Explore Movies & TV Shows</p>
             <section class="flex-row main">
                
             </section>
@@ -78,11 +79,7 @@
                     <div class="tile is-parent is-vertical">
                         <article class="tile is-child notification is-primary">
                             <p class="title">Description</p>
-                            <p class="subtitle"> Being a fan of movies, one might want to keep track of which movies
-                                they have seen throught
-                                the year.
-                                With this app you are able to search for a specific movie and add it to a list that will
-                                keep track of what movies you have watched and what day they were watched on.</p>
+                            <p class="subtitle"> Jake Sully lives with his newfound family formed on the extrasolar moon Pandora. Once a familiar threat returns to finish what was previously started, Jake must work with Neytiri and the army of the Na'vi race to protect their home.</p>
                         </article>
                         <article class="tile is-child notification is-warning">
                             <p class="title">Joke Generator</p>
@@ -150,7 +147,7 @@
             </div>
         </div>
         <!-- Footer -->
-        <footer class="footer-background pt-1 pb-1">
+        <footer class="footer-background pt-4 pb-1">
             <div class="content has-text-centered">
                 <p><strong>Made by</strong> Jacob Zea, Sutton Charpentier, Iaroslav Lasiichuk, Axel Iras 2023</p>
             </div>
