added comments, text and image change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <!-- Navbar -->
+  <!-- Navbar with links-->
   <nav class="navbar is-warning">
     <div class="navbar-brand">
       <h1 class="header navbar-item has-text-centered"><i class="fa-sharp fa-solid fa-video"></i>Movie Tracker</h1>
@@ -73,7 +73,7 @@
 
       </section>
     </div>
-    <!-- Info -->
+    <!-- Info containing the main content of the page-->
     <div id="info" class="tile is-ancestor m-5">
       <div class="tile is-vertical is-8">
         <div class="tile">
@@ -85,8 +85,10 @@
                 Neytiri and the army of the Na'vi race to protect their home.</p>
             </article>
             <article class="tile is-child notification is-warning">
-              <p class="title">Joke Generator</p>
-              <p class="subtitle">Click button</p>
+              <p class="title">Chuck Norris Joke</p>
+              <figure>
+                <img src="./assets/screenshots/chuck.jfif" alt="chuck norris holding guns with an american flag in the background">
+              </figure>
               <button class="button btn-chuck is-danger">Joke Generator</button>
             </article>
           </div>
@@ -104,10 +106,7 @@
         </div>
         <div class="tile is-parent">
           <article class="tile is-child notification is-danger has-text-centered">
-            <p class="title">Chuck Norris joke will be here</p>
-            <p class="subtitle">Click button Joke Generator</p>
             <div class="content chuck-joke">
-              <!-- Content -->
             </div>
           </article>
         </div>
@@ -121,7 +120,6 @@
 
             </ul>
             <div class="content">
-              <!-- Content -->
             </div>
           </div>
         </article>
@@ -152,7 +150,7 @@
     <!-- Footer -->
     <footer class="footer-background pt-4 pb-1">
       <div class="content has-text-centered">
-        <p><strong>Made by</strong> Jacob Zea, Sutton Charpentier, Iaroslav Lasiichuk, Axel Iras 2023</p>
+        <p><strong>Made by</strong> Jacob Zea, Sutton Charpentier, Iaroslav Lasiichuk, Axel Irias ©2023</p>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
